[package]
name = "mdtoepson"
description = "Filter to change from markdown format to Epson ESC codes for my Panasonic KX-2123."
version = "0.1.2"
edition = "2021"
authors = ["Grant Lemons <grantlemons@aol.com>"]
license = "GPL-3.0"
repository = "https://github.com/grantlemons/mdtoepson"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
logos = "0.13.0"
